# JarvisLocal

./: Dockerfile  README.md  cleanup.py  config.ini  config.ini.example  config.ini.gpu-example  download_spanish_model.sh  list_audio_devices.py  pyproject.toml  run.py
.github/workflows/: build.yml  ci.yml
src/voice_assistant/: __init__.py  assistant.py  audio_input.py  audio_utils.py  config_manager.py  groq_handler.py  llm_handler.py  music_player.py  synthesizer.py  transcriber.py  voice_assistant.py  web_search.py
tests/: __init__.py  test_audio_utils.py  test_config_manager.py  test_config_manager_helpers.py  test_groq_handler.py  test_llm_handler.py  test_llm_handler_search.py  test_multiple_wakewords.py  test_ollama_connection.py  test_synthesizer.py  test_timer_duration.py  test_transcriber.py  test_web_search.py
